--- a/style.css
+++ b/style.css
@@ -55,6 +55,18 @@ h1 {
   cursor: not-allowed;
 }
 
+.terrain-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+.terrain-block {
+  margin-bottom: 1.5rem;
+  max-width: 500px;
+}
+
 /* Output Styling */
 #outputArea {
   min-height: 300px;
