--- a/style.css
+++ b/style.css
@@ -115,8 +115,8 @@ body {
   -webkit-text-size-adjust: 100%; /* Prevent font scaling in landscape */
 }
 
-p {
-  font-size: 80%;
+p, li {
+  font-size: 85%;
 }
 
 a, a:link {
