--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@
   --input-text: #000000;
   --input-focus-border: #0077cc;
   --table-bg: #e5e5e5;
+  --table-cell-bg: #ffffff;
 }
 
 .dark-mode {
@@ -50,6 +51,7 @@
   --condition-border: #5a5233;
   --condition-active-bg: #331a1a;
   --table-bg: #333333;
+  --table-cell-bg: #1e1e1e;
   --condition-active-border: #662222;
   --condition-active-color: #ff6666;
   --output-bg: #272727;
@@ -136,6 +138,11 @@ table {
   border-spacing: 1px;
   font-size: 80%;
   background-color: var(--table-bg);
+}
+
+th, td {
+  background-color: var(--table-cell-bg);
+  padding: 4px 6px;
 }
 
 main {
